2002-06-20  Mo DeJong  <supermo@bayarea.net>

	* gui/execgrepdriver.tcl (isValidPattern, start, isAvailable):
	Add isValidPattern method, it lets the user ask the driver if
	a given pattern can be used before actually invoking the driver.
	Pass -- to the grep command after the -n and -i flags so user
	can type in a pattern that starts with the - character.
	* gui/greppane.tcl (GrepDriver, StartGrep): Add isValidPattern
	method declaration to the driver interface. Use new isValidPattern
	method to provide the user with a error dialog box in the
	case of an invalid pattern. Remove check for - character at
	the beginning of a pattern since this needs to be handled in
	the driver.
	* gui/tclgrepdriver.tcl (isValidPattern): Add isValidPattern
	method, it lets the user ask the driver if a given pattern can
	be used before actually invoking the driver.
	* tests/gui/execgrepdriver.test: Test pattern that starts with -.
	* tests/gui/tclgrepdriver.test: Ditto.

2002-06-20  Mo DeJong  <supermo@bayarea.net>

	* gui/misc.tcl (sn_title): Remove useless call to join
	that was generating an error if the user entered
	"HI {" as a grep pattern.

2002-06-20  Mo DeJong  <supermo@bayarea.net>

	* gui/tclgrepdriver.tcl (processNextIndex, inputReadyCallback):
	Unset currentFileBuffer after running the grep to deallocate
	the buffer instead of setting it to the empty string before
	running the next grep. Just set the buffer in the fileevent
	callback instead of appending to an empty variable. This
	can cut the amount in memory needed in half since it avoids
	doubling the allocated size in the append command. Check to
	see if all bytes have been read by checking the size of the
	buffer instead of decrementing after a read.

2002-06-20  Mo DeJong  <supermo@bayarea.net>

	* gui/tclgrepdriver.tcl (line_grep): Fix search for last
	character in buffer as well as bad variable access introduced
	by my last checkin.

2002-06-20  Mo DeJong  <supermo@bayarea.net>
